--- a/src/CommonUtilities/CommonUtilities.WPF.Controls.Styles.Fluent/Styles/MenuItemStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls.Styles.Fluent/Styles/MenuItemStyle.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:fluent="clr-namespace:AnakinRaW.CommonUtilities.Wpf">
+                    xmlns:fluent="clr-namespace:AnakinRaW.CommonUtilities.Wpf"
+                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls;assembly=AnakinRaW.CommonUtilities.WPF.Controls"
+                    xmlns:controls1="clr-namespace:AnakinRaW.CommonUtilities.Wpf.ApplicationFramework.Controls;assembly=AnakinRaW.CommonUtilities.WPF.ApplicationFramework">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="FluentFocusVisualStyle.xaml"/>
@@ -8,11 +10,14 @@
     </ResourceDictionary.MergedDictionaries>
 
     <ControlTemplate x:Key="SubmenuHeaderTemplate" TargetType="{x:Type MenuItem}">
-
+        <Border x:Name="ControlBorder" Background="Green"
+                CornerRadius="20" Width="100" Height="100"
+                Padding="{TemplateBinding Control.Padding}">
+        </Border>
     </ControlTemplate>
 
-    <Style x:Key="MenuItemStyle" TargetType="{x:Type MenuItem}">
-        <Setter Property="Background" Value="Transparent"/>
+    <Style x:Key="MenuItemStyle" TargetType="{x:Type controls:ThemedMenuItem}">
+        <Setter Property="Background" Value="Red"/>
         <Setter Property="FocusVisualStyle" Value="{StaticResource FluentFocusVisualStyle}"/>
         <Setter Property="Foreground" Value="{DynamicResource {x:Static fluent:FluentColors.TextFillPrimary}}"/>
         <Setter Property="Margin" Value="{x:Static fluent:FluentConstants.ControlMarginXSmall}"/>
@@ -44,5 +49,8 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+
+    <Style x:Key="{x:Static controls1:StylingContextMenu.MenuStyleKey}" BasedOn="{StaticResource MenuItemStyle}"
+           TargetType="{x:Type controls1:DynamicStyledMenuItem}"/>
 
 </ResourceDictionary>
