--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/ThemedButtonStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/ThemedButtonStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls1="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
+                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
                     xmlns:themes="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors"
                     xmlns:imaging="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Imaging;assembly=AnakinRaW.CommonUtilities.WPF.Imaging"
                     xmlns:converters="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Converters;assembly=AnakinRaW.CommonUtilities.WPF.Core">
@@ -8,7 +8,7 @@
     <converters:BrushToColorConverter x:Key="BrushToColorConverter"/>
     <converters:IsNullOrEmptyConverter x:Key="IsNullOrEmptyConverter"/>
 
-    <Style TargetType="{x:Type controls1:ThemedButton}">
+    <Style TargetType="{x:Type controls:ThemedButton}">
         <Setter Property="imaging:ImageThemingUtilities.ImageBackgroundColor"
                 Value="{Binding Background, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushToColorConverter}}"/>
         <Setter Property="BorderThickness" Value="1"/>
@@ -19,7 +19,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls1:ThemedButton}">
+                <ControlTemplate TargetType="{x:Type controls:ThemedButton}">
                     <Border x:Name="Border" SnapsToDevicePixels="True"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
